--- a/learning_logs/templates/learning_logs/new_topic.html
+++ b/learning_logs/templates/learning_logs/new_topic.html
@@ -10,7 +10,7 @@
 
 	<form action = "{%url 'learning_logs:new_topic' %}" method = 'post' class ="form">
 		{% csrf_token %}
-		{bootstrap_form form %}
+		{% bootstrap_form form %}
 
 		{% buttons %}
 			<button name="submit" class="btn btn-primary">add topic</button>
