--- a/learning_logs/templates/learning_logs/edit_entry.html
+++ b/learning_logs/templates/learning_logs/edit_entry.html
@@ -2,11 +2,11 @@
 
 {% block content % }
 
-<p> <ahref="{% url 'learning_logs:topic' topic.id %}">{{ topic }}</a> </p>
+<p> <a href="{% url 'learning_logs:topic' topic.id %}">{{ topic }}</a> </p>
 
 <p>Edit entry:</p>
 
-<form action ="{% url 'learning_ogs:edit_entry' entry.id %}" methods = 'post'>
+<form action ="{% url 'learning_logs:edit_entry' entry.id %}" methods = 'post'>
 	{% csrf_token %}
 	{{form.as_p}}
 	<button name = "submit"> save changes </button>
