--- a/learning_logs/templates/learning_logs/edit_entry.html
+++ b/learning_logs/templates/learning_logs/edit_entry.html
@@ -6,7 +6,7 @@
 
 <p>Edit entry:</p>
 
-<form action ="{% url 'learning_logs:edit_entry' entry.id %}" methods = 'post'>
+<form action ="{% url 'learning_logs:edit_entry' entry.id %}" method = 'post'>
 	{% csrf_token %}
 	{{form.as_p}}
 	<button name = "submit"> save changes </button>
